<resources>
    <string name="app_name">Zarooori</string>
    <string name="world_vehical_service">World Vehicle Services</string>
    <string name="Aswack" />
    <string name="companyname">Aswack</string>
    <string name="registration">Registration</string>
    <string name="company_name">Company Name</string>
    <string name="car_surgeon">Car Surgeon</string>
    <string name="company_owner_name">Company Owner Name</string>
    <string name="company_logo">Company logo</string>
    <string name="upload">Upload</string>
    <string name="landline_number">Landline Number</string>
    <string name="company_mobile_number">Company Mobile Number</string>
    <string name="company_alternate_mobile_number">Company Alternate Mobile Number</string>
    <string name="alternate_mobile_number">Alternate Mobile Number</string>
    <string name="company_email_id">Company email id</string>
    <string name="company_website">Company website</string>
    <string name="enter_your_company_address">Enter your company address</string>
    <string name="street_no_name">Street no./name</string>
    <string name="building_number">Building number</string>
    <string name="pin_code">Pin code</string>
    <string name="company_details">Company Details</string>
    <string name="_0_200">0/200</string>
    <string name="timing">Timing</string>
    <string name="regular">Regular</string>
    <string name="_24_7">24*7</string>
    <string name="select_your_package">Select Your package</string>
    <string name="profile">Profile</string>
    <string name="rfq">RFQ</string>
    <string name="logout">Logout</string>
    <string name="help">Help Center</string>
    <string name="faq">FAQ\'s</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms and Condition</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="find_offers">Find an Offers</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="hello">Hello,</string>
    <string name="our_services">Please Select your Domain from below list.</string>
    <string name="call_to_admin">Call to Admin</string>
    <string name="chat_with_admin">Chat with Admin</string>
    <string name="welcome_to_zarooori">Welcome to Zarooori</string>
    <string name="customer_name">Customer Name</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="commercial">Commercial</string>
    <string name="emergency_vehical">Emergency Vehicle</string>
    <string name="heavy_vehicle">Heavy Vehicle</string>
    <string name="mechanical">Mechanical</string>
    <string name="electrical">Electrical</string>
    <string name="painting">Painting</string>
    <string name="denting">Denting</string>
    <string name="set_a_price">Set A Price</string>
    <string name="what_are_you_selling">What are you selling?</string>
    <string name="sell_car">Sell Car</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_name">Welcome Name</string>
    <string name="my_product">My Products</string>
    <string name="my_offers">My Offers</string>
    <string name="generating_notification">Generating Notification</string>
    <string name="my_orders">My Orders</string>
    <string name="customer_chat">Customer Chat</string>
    <string name="my_rating">My Rating</string>
    <string name="customise_requirement">Customise Requirement</string>
    <string name="welcome_info">We are Happy to help you us to grow your Business</string>
    <string name="products">Products</string>
    <string name="search_hint">Search by name, serial number...</string>
    <string name="your_product_list">Your product List</string>
    <string name="product_count">5 Products</string>
    <string name="offer_count">15 Offers</string>
    <string name="add_new_products">Add New Products</string>
    <string name="new_">New</string>
    <string name="name">Name</string>
    <string name="serial_number">Serial no.</string>
    <string name="toyota_corola">Toyota corola</string>
    <string name="price">Price</string>
    <string name="add_product">Add Product</string>
    <string name="product_id">Product ID : PRD001</string>
    <string name="product_serial_number">Product Serial Number</string>
    <string name="description">Description</string>
    <string name="_0_200_">0/200</string>
    <string name="used_second_hand">Used/ Second Hand</string>
    <string name="select_image">Select Product Images</string>
    <string name="submit_and_review">Submit</string>
    <string name="enter_message">Enter Message</string>
    <string name="add_image">Add Image</string>
    <string name="select_post_date">Select Post Date</string>
    <string name="add_notification">Add Notification</string>
    <string name="notification">Notification</string>
    <string name="message">Message</string>
    <string name="message_info">"It is a long established fact that a reader will be distracted by the readable content of a page...... "</string>
    <string name="status">Status :</string>
    <string name="posting_date">Posting Date</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="submit">Submit</string>
    <string name="your_offer_list">Your Offer List</string>
    <string name="add_new_offers">Add New Offers</string>
    <string name="offers">Offers</string>
    <string name="offer_name">Offer Name</string>
    <string name="product_name">Product Name</string>
    <string name="offer_code">Offer Code</string>
    <string name="offer_start_date">Offer Start Date</string>
    <string name="offer_end_date">Offer End Date</string>
    <string name="original_price">Original Price</string>
    <string name="offer_price">Offer Price</string>
    <string name="add_offer">Add Offer</string>
    <string name="offer_id">Offer Id</string>
    <string name="offer_original_price">Offer Original Price</string>
    <string name="select_start_date">Select Offer Start Date</string>
    <string name="select_end_date">Select Offer End Date</string>
    <string name="select_offer_image">Select Offer Image</string>
    <string name="customer_requirement">Customer Requirment</string>
    <string name="requirement">Requirements</string>
    <string name="inquiry_id">Inquiry Id:</string>
    <string name="customer_name_colon">Customer Name:</string>
    <string name="customer_req_images">Customer Requirement Image:</string>
    <string name="product_detail">Product Details</string>
    <string name="product_price">Product Price</string>
    <string name="chat_with_customer">Chat with Customer</string>
    <string name="type_message_here">Type message here...</string>
    <string name="rating_and_review">Rating and Review</string>
    <string name="reply">Reply</string>
    <string name="company_profile_page">Company Profile Page</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="image_size_restriction_message">Image size is too big.</string>
    <string name="package_name">Package</string>
    <string name="enter_ten_characters">Please enter ten chracters</string>
    <string name="fill_all_details">Fill all details</string>
    <string name="resend_it"><u>Resend it</u></string>
    <string name="image">image</string>
    <string name="enter_email_phone_no">Enter Phone No.</string>
    <string name="we_will_send_you_a">We Will Send you a</string>
    <string name="enter_mobile_no">Enter mobile no.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_register_yet">Not Register yet?</string>
    <string name="register_here">Register Here</string>
    <string name="signup">Signup</string>
    <string name="full_name">Full name</string>
    <string name="enter_email_mobile_no">Enter Email/Mobile no.</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email">Email</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="email_optional">Email(Optional)</string>
    <string name="house_no_optional">House no,flat/society name(optional)</string>
    <string name="enter_house_no_flat_society_name">Enter house no.flat/society name</string>
    <string name="street_name_optional">Street name(optional)</string>
    <string name="select_birth_date">Select birth date</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pincode">Pincode</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="select_gender">Select Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="already_registered">Already Registered?</string>
    <string name="click_here"><u>Click Here</u></string>
    <string name="today">Today</string>
    <string name="time">Time</string>
    <string name="yesterday">Yesterday</string>
    <string name="password_not_matched">Password not matched</string>
    <string name="login_successfull">Login Successfull</string>
    <string name="country">Country</string>
    <string name="registration_successfull">Registration successfull.</string>
    <string name="select_timing">Select Timings</string>
    <string name="select_company_type">Select Company Type</string>
    <string name="offer_created">Offer created successfully</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="transmission">Transmission</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>
    <string name="km_driven">KM Driven</string>
    <string name="_0_6">0/6</string>
    <string name="ad_title">Ad Title</string>
    <string name="_0_70">0/70</string>
    <string name="describe_what_are_you_selling">Describe what are you selling</string>
    <string name="_0_4096">0/4096</string>
    <string name="include_condition_features_and_reason_for_selling">Include condition, features and reason for selling</string>
    <string name="select_location">Select Location</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="search">Search</string>
    <string name="review_confirm"><![CDATA[Review & Confirm]]></string>
    <string name="permission_denied">Permission Denied</string>
    <string name="photoes_uploaded">Photos Uploaded</string>
    <string name="include_some_details">Include Some Details</string>
    <string name="select_transmition_type">Please select transmission type</string>
    <string name="vehicle_sell">Vehicle sell</string>
    <string name="offer_for_me">Offer For Me</string>
    <string name="posts">Posts</string>
    <string name="send_request">Send Request</string>
    <string name="contact_for_custom_package">If you Need any custom package please contact us.</string>
    <string name="_20_ads_found">20 ads found</string>
    <string name="search_result">Search Result</string>
    <string name="select_brand">Select Brand</string>
    <string name="select_type">Select Type</string>
    <string name="select_model">Select Model Name</string>
    <string name="select_year">Select Model Year</string>
    <string name="year">Year</string>
    <string name="buy_now">Buy Now</string>
    <string name="landmak">Landmark</string>
    <string name="interested">Interested</string>
    <string name="select_fuel">Select Fuel Type</string>
    <string name="booking_list">Booking List</string>
    <string name="my_packages">My Packages</string>
    <string name="total_added">Total Added: </string>
    <string name="remaining_to_add">Remaining to Add: </string>
    <string name="days_remaining">Days Remaining: </string>
</resources>