<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/gallery"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/view_color" />

        <TextView
            android:id="@+id/tvCamera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/view_color" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>