<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_5sdp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="115dp" />


    <TextView
        android:id="@+id/tvTotalAdded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/total_added"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_9ssp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTotalAddedValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRemaining"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/remaining_to_add"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalAdded" />

    <TextView
        android:id="@+id/tvRemainingValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/tvTotalAdded" />


    <TextView
        android:id="@+id/tvDaysRemaining"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/days_remaining"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRemainingValue" />

    <TextView
        android:id="@+id/tvDaysRemainingValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/tvRemainingValue" />


</androidx.constraintlayout.widget.ConstraintLayout>